--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,32 @@
+:root{
+  --primary:#E4E0E1;
+--secondary:#D6C0B3;
+--tertiary:#AB886D;
+--forgery:#493628;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto" , "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(146, 26, 64);
+  background-color: var(--primary);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* 
+#E4E0E1
+#D6C0B3
+#AB886D
+#493628
+rgb(228, 224, 225)
+rgb(214, 192, 179)
+rgb(171, 136, 109)
+rgb(73, 54, 40) 
+*/
