--- a/src/components/Logincom/Loginsign.css
+++ b/src/components/Logincom/Loginsign.css
@@ -1,13 +1,13 @@
-.container {
+.containerlog {
     width: 550px;
     display: flex;
     margin: auto;
     margin-top: 110px;
-    background-color: rgb(245, 245, 245); /* Soft light gray */
+    background-color: rgb(245, 245, 245); 
     flex-direction: column;
     padding-bottom: 30px;
-    border-radius: 15px; /* Added for a modern look */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    border-radius: 15px; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
 }
 
 .header {
