--- a/src/components/restaurant/css/Items.css
+++ b/src/components/restaurant/css/Items.css
@@ -1,56 +1,116 @@
-.main{
-   display: grid;
-   grid-template-columns: 1fr 5fr;
-   color: var(--forgery);
+.main {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  color: var(--forgery);
 }
 
-.items{
-    /* display: grid; */
-    display: flex;
+.items {
+  /* display: flex;
     flex-wrap: wrap;
     justify-content: center;
     height: 100vh;
-    overflow-y: auto;
+    overflow-y: auto; */
+}
+.itemsListing {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.sidebar{
-    width: 250px;
-    height: 90vh;
-    /* left: 0;top: 0;z-index: 2;position: fixed;  */
-    background-color: var(--primary);
-    padding: 5vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    position: relative;
-    
+.sidebar {
+  width: 250px;
+  /* height: 90vh; */
+  /* left: 0;top: 0;z-index: 2;position: fixed;  */
+  /* background-color: var(--primary); */
+  padding: 5vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
 }
 
-
-::-webkit-scrollbar {
-    display: none; /* For Chrome, Safari, and Opera: Hide scrollbar */
-}
-.itemCard{
-    width: 250px;
-    padding: 10px;
-    margin: 10px;
-    background-color: var(--secondary);
+/* ::-webkit-scrollbar {
+    display: none; 
+} */
+.itemCard {
+  /* width: 250px; */
+  padding: 10px;
+  margin: 10px;
+  background-color: var(--secondary);
+  border-radius: 12px;
+  border: 1.5px solid var(--tertiary);
+  img {
     border-radius: 12px;
-    border: 1.5px solid var(--tertiary);
-    img{
-        border-radius: 12px;
-        width: 100%;
-        height: 200px;
-    }
+    width: 100%;
+    height: 200px;
+  }
 }
 
-h2{
-    margin-left: 50px;
-    width: 100%;
+h2 {
+  margin-left: 50px;
+  width: 100%;
 }
-hr{
-    
-    
-    color: black;
-    border: 1px solid black;
-    /* width: 250px; */
+hr {
+  color: black;
+  border: 1px solid black;
+  /* width: 250px; */
+}
+
+.popUpBg {
+  position: fixed;
+  background-color: rgba(102, 97, 97, 0.652);
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  /* overflow: scroll; */
+}
+.itemForm {
+  color: rgb(40, 37, 79);
+  /* font-weigh   t: 500; */
+  font-size: 18px;
+  font-family: "Trebuchet MS";
+  background-color: var(--secondary);
+  padding-inline: 20px;
+  padding-block: 1%;
+  /* width: 40%; */
+  width: 400px;
+  margin-inline: 50px;
+  div {
+    /* background-color: pink; */
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    label {
+      margin: 2px;
+      color: rgba(80, 80, 80, 0.8);
+      font-size: 16px;
+      font-family: "Trebuchet MS";
+      font-weight: 600;
+    }
+  }
+  .gender {
+    display: block;
+  }
+  input,
+  textarea,
+  select {
+    border: 0;
+    border-radius: 6px;
+    font-size: 14px;
+    padding: 10px;
+    /* height: 1.5rem; */
+    /* margin: 10px; */
+  }
+  textarea {
+  }
+}
+
+.addNewItem {
+  button {
+    width: 100px;
+    height: 50px;
+  }
 }
