--- a/src/components/user/css/Home.css
+++ b/src/components/user/css/Home.css
@@ -1,34 +1,57 @@
 .main{
     display: flex;
-    background-color:rgb(217, 216, 185);
+    /* background-color:rgb(217, 216, 185); */
     flex-direction: column;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-inline: 10%;
 }
 
 h2{
-    font-size: 34px;
+    font-size: 26px;
 }
 
 hr{
     border: 0;
     height: 2px;
-    background-color: var(--tertiary);
+    background-color: black;
 }
+
+.categories{
+    
+}
+
+.categoriesBody{
+    display: flex;
+    overflow-x: auto;
+    font-size: 1rem;
+}
+
+.category{
+    display: block;
+    min-width: 100px;
+    margin: 20px;
+}
+
+.categoryImg{
+    /* object-fit: scale-down; */
+    width: 100%;
+}
+/* 
 .categories{
     width: 100%;
     background-color: rgb(217, 216, 185);;
 }
+
 .categoriesBody{
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding: 0px 0px 20px 0px;
 }
+
 .category{
     
-    /* width: 150px; */
-    /* height: 100px; */
+    width: 150px;
+    height: 100px;
     border: 1px solid black;
     padding: 6px;
     background-color: rgb(206, 175, 175);
@@ -43,28 +66,31 @@ hr{
     }
     img{
         border-radius: 12px ;
-        width: 70px;
+        width: 70%;
+        object-fit: scale-down;
     }
-}
+} */
 
 .restaurants{
-    width: 100%;
+    /* width: 100%; */
 }
 .restaurantBody{
- display: flex;
- flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit ,minmax(300px,1fr));
 }
 
 .restaurant{
     .resImage{
         height: 200px;
+        object-fit: cover;
     }
-    background-color: var(--tertiary);
-    width: 350px;
-    margin: 25px;
+    background-color: var(--primary);
+    /* width: 50%; */
+    margin: 10px;
     display: flex;
     flex-direction: column;
     .details{
-        padding: 0px 0px 0px 15px;
+        /* padding: 0px 0px 0px 15px; */
+        margin-left: 25px   ;
     }
 }
